--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 alembic==0.9.2
+amqp==2.1.4
 aniso8601==1.2.1
+billiard==3.5.0.2
 boto==2.47.0
 boto3==1.4.4
 botocore==1.5.63
+celery==4.0.2
 certifi==2017.4.17
 chardet==3.0.4
 click==6.7
@@ -19,6 +22,7 @@ idna==2.5
 itsdangerous==0.24
 Jinja2==2.9.6
 jmespath==0.9.3
+kombu==4.0.2
 Mako==1.0.6
 MarkupSafe==1.0
 marshmallow==2.13.5
@@ -27,6 +31,7 @@ moto==1.0.1
 pbr==3.0.1
 psycopg2==2.7.1
 pyaml==16.12.2
+pycurl==7.43.0
 python-dateutil==2.6.0
 python-editor==1.0.3
 pytz==2017.2
@@ -36,5 +41,6 @@ s3transfer==0.1.10
 six==1.10.0
 SQLAlchemy==1.1.10
 urllib3==1.21.1
+vine==1.1.3
 Werkzeug==0.12.2
 xmltodict==0.11.0
