--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,67 @@
-alembic==0.9.2
-amqp==2.1.4
-aniso8601==1.2.1
-billiard==3.5.0.2
-boto==2.47.0
-boto3==1.4.4
-botocore==1.5.63
-celery==4.0.2
-certifi==2017.4.17
+alembic==1.4.1
+amqp==2.5.2
+aniso8601==8.0.0
+astroid==2.3.3
+attrs==19.3.0
+aws-sam-translator==1.22.0
+aws-xray-sdk==2.4.3
+billiard==3.6.3.0
+boto==2.49.0
+boto3==1.12.24
+botocore==1.15.24
+celery==4.4.2
+certifi==2019.11.28
+cffi==1.14.0
+cfn-lint==0.29.0
 chardet==3.0.4
-click==6.7
-cookies==2.2.1
-dicttoxml==1.7.4
-docutils==0.13.1
-Flask==0.12.2
-Flask-Migrate==2.0.4
-Flask-RESTful==0.3.6
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.2
-gunicorn==19.7.1
-idna==2.5
-itsdangerous==0.24
-Jinja2==2.9.6
-jmespath==0.9.3
-kombu==4.0.2
-Mako==1.0.6
-MarkupSafe==1.0
-marshmallow==2.13.5
-mock==2.0.0
-moto==1.0.1
-pbr==3.0.1
-psycopg2==2.7.1
-pyaml==16.12.2
-pycurl==7.43.0
-python-dateutil==2.6.0
-python-editor==1.0.3
-pytz==2017.2
-PyYAML==3.12
-requests==2.17.3
-s3transfer==0.1.10
-six==1.10.0
-SQLAlchemy==1.1.10
-urllib3==1.21.1
-vine==1.1.3
-Werkzeug==0.12.2
-xmltodict==0.11.0
+click==7.1.1
+cryptography==2.8
+decorator==4.4.2
+docker==4.2.0
+docutils==0.15.2
+ecdsa==0.15
+Flask==1.1.1
+Flask-Migrate==2.5.3
+Flask-RESTful==0.3.8
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.1
+future==0.18.2
+idna==2.8
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.1
+jmespath==0.9.5
+jsondiff==1.1.2
+jsonpatch==1.25
+jsonpickle==1.3
+jsonpointer==2.0
+jsonschema==3.2.0
+kombu==4.6.8
+lazy-object-proxy==1.4.3
+Mako==1.1.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mock==4.0.2
+moto==1.3.14
+networkx==2.4
+pyasn1==0.4.8
+pycparser==2.20
+pyrsistent==0.15.7
+python-dateutil==2.8.1
+python-editor==1.0.4
+python-jose==3.1.0
+pytz==2019.3
+PyYAML==5.3.1
+requests==2.23.0
+responses==0.10.12
+rsa==4.0
+s3transfer==0.3.3
+six==1.14.0
+SQLAlchemy==1.3.15
+sshpubkeys==3.1.0
+urllib3==1.25.8
+vine==1.3.0
+websocket-client==0.57.0
+Werkzeug==1.0.0
+wrapt==1.11.2
+xmltodict==0.12.0
