--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,12 @@ sudo: required
 group: deprecated-2017Q2
 services:
   - docker
-language:
-  - python
+language: python
 python:
-  - "3.6"
+  - "3.8"
 env:
-  DOCKER_COMPOSE_VERSION: 1.11.2
+  - DOCKER_COMPOSE_VERSION=1.4.2
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install docker-engine
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
